divider above last section in home-benefits creating gap. fixed

--- a/wp-content/themes/floateasy/sass/pages/_home-benefits.scss
+++ b/wp-content/themes/floateasy/sass/pages/_home-benefits.scss
@@ -136,7 +136,7 @@
 			border-bottom: 160px solid $red;
 			border-top: 10px solid transparent;
 			border-right: 100vw solid transparent;	
-			bottom: 460px;	
+			bottom: 458px;	
 		}
 	}
 }
